--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,8 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
-	shallow = true
+	url = https://github.com/perpetual-ml/perpetual-ml.r-universe.dev
 	branch = HEAD
+[submodule "perpetual"]
+	path = perpetual
+	url = https://github.com/perpetual-ml/perpetual
+	branch = r-universe
